Make lmdbjava work with Java 17